k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend-deployment
  labels:
    app: mern-backend
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend

    spec:
      containers:
        - name: mern-backend
          image: 17harsha08/mern-backend:a958f05b83bc815d3dc27866e3aa55708a698c78
          imagePullPolicy: Always
          ports:
            - containerPort: 80
