k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mern-backend-service
  namespace: mern-app
spec:
  selector:
    app: mern-backend
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32500
  type: NodePort
